--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#F44336</color>
-    <color name="green">#4CAF50</color>
+    <color name="green_600">#4CAF50</color>
+    <color name="green_200">#b0ec4c</color>
+    <color name="green_300">#85cc16</color>
+    <color name="green_700">#64a30c</color>
+    <color name="green_800">#365313</color>
+
+
     <color name="blue">#3F51B5</color>
 </resources>
