--- a/app/src/main/res/layout/fragment_third_ho_wo_3.xml
+++ b/app/src/main/res/layout/fragment_third_ho_wo_3.xml
@@ -2,14 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:padding="8dp"
+    tools:background="@color/green_700">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/main_fragments_container"
+
+    <TextView
+        android:id="@+id/tv_text"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        tools:text="knfndnvnsdjnvsv"
+        android:textAlignment="center"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
