--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="green_300">#85cc16</color>
     <color name="green_700">#64a30c</color>
     <color name="green_800">#365313</color>
+    <color name="grey_200">#90CAF9</color>
 
 
     <color name="blue">#3F51B5</color>
