--- a/app/src/main/res/navigation/nav_main_graph.xml
+++ b/app/src/main/res/navigation/nav_main_graph.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main_graph"
-    app:startDestination="@id/AFragment">
+    app:startDestination="@id/accountFragment">
 
     <fragment
         android:id="@+id/AFragment"
         android:name="com.example.education.presentation.fragments.homework5.AFragment"
         android:label="fragment_a"
-        tools:layout="@layout/fragment_a" >
+        tools:layout="@layout/fragment_a">
         <action
             android:id="@+id/action_AFragment_to_a2Fragment"
             app:destination="@id/a2Fragment" />
@@ -18,7 +18,7 @@
         android:id="@+id/a2Fragment"
         android:name="com.example.education.presentation.fragments.homework5.A2Fragment"
         android:label="fragment_a_2"
-        tools:layout="@layout/fragment_a_2" >
+        tools:layout="@layout/fragment_a_2">
         <action
             android:id="@+id/action_a2Fragment_to_a3Fragment"
             app:destination="@id/a3Fragment" />
@@ -27,7 +27,7 @@
         android:id="@+id/a3Fragment"
         android:name="com.example.education.presentation.fragments.homework5.A3Fragment"
         android:label="fragment_a_3"
-        tools:layout="@layout/fragment_a_3" >
+        tools:layout="@layout/fragment_a_3">
         <action
             android:id="@+id/action_a3Fragment_to_AFragment"
             app:destination="@id/AFragment" />
@@ -36,7 +36,7 @@
         android:id="@+id/BFragment"
         android:name="com.example.education.presentation.fragments.homework5.BFragment"
         android:label="fragment_b"
-        tools:layout="@layout/fragment_b" >
+        tools:layout="@layout/fragment_b">
         <action
             android:id="@+id/action_BFragment_to_b2Fragment"
             app:destination="@id/b2Fragment" />
@@ -50,7 +50,7 @@
         android:id="@+id/CFragment"
         android:name="com.example.education.presentation.fragments.homework5.CFragment"
         android:label="fragment_c"
-        tools:layout="@layout/fragment_c" >
+        tools:layout="@layout/fragment_c">
         <action
             android:id="@+id/action_CFragment_to_c2Fragment"
             app:destination="@id/c2Fragment" />
@@ -59,7 +59,7 @@
         android:id="@+id/c2Fragment"
         android:name="com.example.education.presentation.fragments.homework5.C2Fragment"
         android:label="fragment_c_2"
-        tools:layout="@layout/fragment_c_2" >
+        tools:layout="@layout/fragment_c_2">
         <action
             android:id="@+id/action_c2Fragment_to_c3Fragment"
             app:destination="@id/c3Fragment" />
@@ -68,9 +68,44 @@
         android:id="@+id/c3Fragment"
         android:name="com.example.education.presentation.fragments.homework5.C3Fragment"
         android:label="fragment_c_3"
-        tools:layout="@layout/fragment_c_3" >
+        tools:layout="@layout/fragment_c_3">
         <action
             android:id="@+id/action_c3Fragment_to_CFragment"
             app:destination="@id/CFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.education.presentation.fragments.homework10.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/accountFragment"
+        android:name="com.example.education.presentation.fragments.homework10.AccountFragment"
+        android:label="fragment_account"
+        tools:layout="@layout/fragment_account">
+        <action
+            android:id="@+id/action_accountFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.education.presentation.fragments.homework10.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_loginFragment_to_accountFragment"
+            app:destination="@id/accountFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_registrationFragment"
+            app:destination="@id/registrationFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registrationFragment"
+        android:name="com.example.education.presentation.fragments.homework10.RegistrationFragment"
+        android:label="fragment_registration"
+        tools:layout="@layout/fragment_registration">
+        <action
+            android:id="@+id/action_registrationFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
