fix upload icon weather

--- a/app/src/main/res/layout/detailed_weather_for_bottom_sheet.xml
+++ b/app/src/main/res/layout/detailed_weather_for_bottom_sheet.xml
@@ -22,24 +22,25 @@
         android:id="@+id/temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-13.0"
         android:textAlignment="center"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
         app:layout_constraintEnd_toStartOf="@+id/weatherIcon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cityName" />
+        app:layout_constraintTop_toBottomOf="@+id/cityName"
+        tools:text="-13.0" />
 
     <ImageView
         android:id="@+id/weatherIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/temp"
         app:layout_constraintTop_toBottomOf="@+id/cityName"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:contentDescription="@string/icon_weather" />
 
     <TextView
         android:id="@+id/humidity"
@@ -82,6 +83,7 @@
         android:textAlignment="textStart"
         android:textSize="20sp"
         android:textStyle="italic"
+        android:paddingBottom="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pressure" />
